tests/rustdoc-ui/error-in-impl-trait/trait-alias.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `error`
  --> $DIR/trait-alias.rs:8:5
   |
LL |     error::_in::impl_trait::alias()
   |     ^^^^^ use of undeclared crate or module `error`

error: Compilation failed, aborting rustdoc

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
